--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@ This powerful kitchen combo brings together the versatility of the Kenwood Blend
 Designed for everyday cooking, this bundle allows you to blend, grind, fry, bake, and crisp your favorite foods while saving time and promoting a healthier lifestyle.
       </p>
 
-      <p class="desc-subhead">Blender Features:</p>
+      <p class="desc-subhead">AirFryer Features:</p>
       <ul class="desc-list">
         <li>Large 6L unit with 4.5L food basket capacity.</li>
         <li>LCD touch screen control.</li>
@@ -2633,4 +2633,5 @@ selectOffer(0);
   </script>
 </body>
 </html>
+
 
