--- a/index.html
+++ b/index.html
@@ -1663,8 +1663,7 @@
         <button class="dot" data-index="4" aria-label="Image 5"></button>
         <button class="dot" data-index="5" aria-label="Image 6"></button>
         <button class="dot" data-index="6" aria-label="Image 7"></button>
-        <button class="dot" data-index="7" aria-label="Image 8"></button>
-        <button class="dot" data-index="8" aria-label="Image 1"></button>
+        <button class="dot" data-index="7" aria-label="Image 1"></button>
       </div>
     </section>
 
@@ -2373,7 +2372,7 @@ Designed for everyday cooking, this bundle allows you to blend, grind, fry, bake
 
 
     // ===== Carousel (dots + swipe) =====
-const images = ["p1.png","p2.png","p3.png","p4.png","p5.png","p6.png","p7.png","p8.png"];
+const images = ["p1.png","p2.png","p3.png","p4.png","p5.png","p6.png","p7.png","p8.png","p9.png"];
 
 const productImage = document.getElementById("productImage");
 const dots = Array.from(document.querySelectorAll(".dots .dot"));
@@ -2633,6 +2632,7 @@ selectOffer(0);
   </script>
 </body>
 </html>
+
 
 
 
